--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         
         
     </section>
-    <img src="assets/rick fundo preto 1.0.jpg" alt="rick sanchez saindo do portal">   
+    <img class="apresentacao__imagem" src="assets/selfie.png" alt="rick sanchez saindo do portal">   
 </main>
 
 <footer class="rodape">
