--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível
+            <h1 class="apresentacao__conteudo__titulo">Conheça o meu portifolio
             <strong class="titulo-destaque"> com um Front-end de qualidade!</strong></h1>
             <p class="apresentacao__conteudo__texto">Eai otários eu sou Rick, além de cientista fodão também sou desenvolvedor Front-End em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias.</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__navegacao" href="https://github.com/">
+                <a class="apresentacao__links__navegacao" href="https://github.com/euram0s">
                     Github
-                    <img src="assets/github.png" alt="logo github">
+                    <img class="assets" src="assets/github.png" alt="logo github">
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://linkedin.com/">
+                <a class="apresentacao__links__navegacao" href="https://linkedin.com/in/marcusvramos">
                     Linkedin
-                    <img src="assets/linkedin.png" alt="logo linkedin">
+                    <img class="assets" src="assets/linkedin.png" alt="logo linkedin">
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://twitch.com/">
-                    Twitch
-                    <img src="assets/twitch.png" alt="logo twitch">
+                <a class="apresentacao__links__navegacao" href="https://instagram.com/euram0s">
+                    Instagram
+                    <img class="assets" src="assets/instagram.png" alt="logo instagram">
                 </a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="./assets/rick fundo preto 1.0.jpg" alt="rick saindo do portal">
+        <img class="apresentacao__imagem" src="./assets/selfie.png" alt="rick saindo do portal">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Ramos</p>
